--- a/teams.html
+++ b/teams.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Association | Membership</title>
+    <title>Sports Association | Teams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -24,99 +24,93 @@
 <body class="font-sans bg-gray-50">
     <div id="nav-container"></div>
 
-    <!-- Membership Hero -->
+    <!-- Teams Hero -->
     <div class="hero-gradient text-white">
         <div class="max-w-7xl mx-auto py-20 px-4 sm:px-6 lg:px-8">
             <div class="text-center" data-aos="fade-up">
                 <h1 class="text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-                    Membership
+                    Our Teams
                 </h1>
                 <p class="mt-6 max-w-2xl mx-auto text-xl">
-                    Become a member and unlock exclusive benefits, events, and a vibrant sports community.
+                    Meet the passionate teams that make our association thrive across every sport.
                 </p>
             </div>
         </div>
     </div>
 
-    <!-- Membership Benefits -->
+    <!-- Teams List -->
     <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
         <div class="text-center mb-16" data-aos="fade-up">
-            <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">Why Join?</h2>
+            <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">Featured Teams</h2>
             <p class="mt-4 max-w-2xl text-xl text-gray-600 mx-auto">
-                Our members enjoy a range of benefits designed to help you grow, connect, and compete.
+                Explore our football, basketball, and tennis teams. Each team is dedicated to excellence and sportsmanship.
             </p>
         </div>
         <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
             <div class="bg-white rounded-lg shadow-md overflow-hidden hover-scale" data-aos="fade-up" data-aos-delay="100">
+                <img src="http://static.photos/team/640x360/1" alt="Football Team" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <div class="flex items-center">
                         <div class="flex-shrink-0 bg-blue-500 rounded-md p-2">
                             <i data-feather="users" class="text-white h-6 w-6"></i>
                         </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">Community Access</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Football Team</h3>
                         </div>
                     </div>
-                    <p class="mt-4 text-gray-600">Connect with fellow athletes, coaches, and sports enthusiasts.</p>
+                    <p class="mt-4 text-gray-600">Competitive and recreational squads for all ages, coached by experienced professionals.</p>
                 </div>
             </div>
             <div class="bg-white rounded-lg shadow-md overflow-hidden hover-scale" data-aos="fade-up" data-aos-delay="200">
+                <img src="http://static.photos/team/640x360/2" alt="Basketball Team" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <div class="flex items-center">
                         <div class="flex-shrink-0 bg-blue-500 rounded-md p-2">
-                            <i data-feather="calendar" class="text-white h-6 w-6"></i>
+                            <i data-feather="activity" class="text-white h-6 w-6"></i>
                         </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">Exclusive Events</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Basketball Team</h3>
                         </div>
                     </div>
-                    <p class="mt-4 text-gray-600">Priority access to tournaments, workshops, and social gatherings.</p>
+                    <p class="mt-4 text-gray-600">Youth and adult teams with year-round training and tournament participation.</p>
                 </div>
             </div>
             <div class="bg-white rounded-lg shadow-md overflow-hidden hover-scale" data-aos="fade-up" data-aos-delay="300">
+                <img src="http://static.photos/team/640x360/3" alt="Tennis Team" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <div class="flex items-center">
                         <div class="flex-shrink-0 bg-blue-500 rounded-md p-2">
-                            <i data-feather="award" class="text-white h-6 w-6"></i>
+                            <i data-feather="star" class="text-white h-6 w-6"></i>
                         </div>
                         <div class="ml-4">
-                            <h3 class="text-lg font-medium text-gray-900">Member Rewards</h3>
+                            <h3 class="text-lg font-medium text-gray-900">Tennis Team</h3>
                         </div>
                     </div>
-                    <p class="mt-4 text-gray-600">Enjoy discounts, recognition, and special offers for members.</p>
+                    <p class="mt-4 text-gray-600">Open to all skill levels, with regular matches and skill development sessions.</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Membership Form -->
-    <div class="bg-gray-100">
-        <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
-            <div class="text-center mb-8" data-aos="fade-up">
-                <h2 class="text-2xl font-extrabold text-gray-900 sm:text-3xl">Sign Up Today</h2>
-                <p class="mt-4 text-gray-600">Fill out the form below to become a member.</p>
+    <!-- Join a Team CTA -->
+    <div class="bg-blue-600 text-white">
+        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+            <h2 class="text-3xl font-extrabold tracking-tight sm:text-4xl" data-aos="fade-right">
+                <span class="block">Want to join a team?</span>
+                <span class="block text-blue-200">Contact us or become a member to get started.</span>
+            </h2>
+            <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0" data-aos="fade-left">
+                <div class="inline-flex rounded-md shadow">
+                    <a href="membership.html" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-blue-600 bg-white hover:bg-blue-50">
+                        Become a Member
+                    </a>
+                </div>
+                <div class="ml-3 inline-flex rounded-md shadow">
+                    <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-500 bg-opacity-60 hover:bg-opacity-70">
+                        Contact Us
+                    </a>
+                </div>
             </div>
-            <form class="bg-white rounded-lg shadow-md p-8 space-y-6">
-                <div>
-                    <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
-                    <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                </div>
-                <div>
-                    <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
-                    <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                </div>
-                <div>
-                    <label for="sport" class="block text-sm font-medium text-gray-700">Preferred Sport</label>
-                    <select id="sport" name="sport" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500">
-                        <option value="">Select a sport</option>
-                        <option value="Football">Football</option>
-                        <option value="Basketball">Basketball</option>
-                        <option value="Tennis">Tennis</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </div>
-                <button type="submit" class="w-full py-3 px-6 rounded-md bg-blue-600 text-white font-medium hover:bg-blue-700 transition">Become a Member</button>
-            </form>
         </div>
     </div>
 
